--- a/app/globals.css
+++ b/app/globals.css
@@ -3,19 +3,26 @@
 @tailwind utilities;
 
 @layer base {
-	a {
-		@apply text-orange-500;
-	}
+  a {
+    @apply text-orange-500;
+  }
 }
 
 @layer utilities {
-	.text-bigger-hello {
-		@apply text-3xl font-semibold;
-	}
+  .text-bigger-hello {
+    @apply text-3xl font-semibold;
+  }
 }
 
 @layer components {
-	.primary-btn {
-		@apply w-full bg-orange-500 text-white font-medium rounded-md text-center transition-colors hover:bg-orange-400;
-	}
+  .primary-btn {
+    @apply w-full rounded-md bg-orange-500 text-center font-medium text-white transition-colors hover:bg-orange-400;
+  }
+}
+
+.line-clamp-1 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1; /* 최대 1줄 */
+  overflow: hidden;
 }
